<resources>
    <string name="app_name">PlatziAndroid</string>
    <string name="title_activity_reference">ReferenceActivity</string>

    <!--Login Activity-->
    <string name="login_hint_username">Digite su Nombre</string>
    <string name="login_hint_passw">Contraseña</string>
    <string name="login_login">Ingresar</string>
    <string name="login_dont_have_account">¿No tienes cuenta?, </string>
    <string name="login_register">Registrate</string>
    <string name="create_cuenta_nueva">Usuario Nuevo</string>
    <string name="create_nombre">Nombre</string>
    <string name="create_usuario">Usuario</string>
    <string name="create_contraseña">Contraseña</string>
    <string name="create_confi_contraseña">Confirmar Contraseña</string>
    <string name="create_btn_crear">Crear</string>
    <string name="create_toolbar_name">Crear Cuenta</string>
    <string name="cardview_first_word">Hace</string>
    <string name="cardview_time_word">4 días</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Perfil</string>
    <string name="picture_detail_second">Me gusta</string>
    <string name="picture_detail_tituloImg">Todo copas en la playa</string>
    <string name="cardview_img_transition">cardviewimgtransition</string>


    <string name="FACEBOOK_APP_ID">1321004818041867</string>
    <string name="facebook_app_id">1321004818041867</string>
    <string name="fb_login_protocol_scheme">fb1321004818041867</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
</resources>
