<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">
            <ImageView
                android:id="@+id/login_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/platzigram"
                android:onClick="goPlatziPage"/>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:padding="@dimen/login_padding_lateral">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_username"
                        android:theme="@style/LoginEditText"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/login_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_passw"
                        android:theme="@style/LoginEditText"/>
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/login_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_login"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"
                    android:theme="@style/LoginRaisedBtn"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/login_dont_have_account"
                        android:text="@string/login_dont_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:textStyle="bold"
                        android:textSize="@dimen/login_dont_have_account"/>
                    <TextView
                        android:id="@+id/login_register"
                        android:text="@string/login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:textSize="@dimen/login_dont_have_account"
                        android:layout_toRightOf="@id/login_dont_have_account"
                        android:paddingLeft="20dp"
                        android:onClick="goCreateAccount"/>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>