<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_picture"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    cardview:cardCornerRadius="@dimen/cardview_corner_radius"
    android:layout_marginBottom="@dimen/cardview_corner_radius"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/cardview_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/cardview_img_transition"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/login_padding_lateral"
            android:paddingBottom="@dimen/login_padding_lateral"
            android:background="@color/cardview_linear_back">
            <TextView
                android:id="@+id/cardview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/login_text"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/cardview_first_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_first_word"
                    android:textSize="@dimen/fab_margin"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:id="@+id/cardview_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_time_word"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/cardview_corner_radius"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/cardview_margin_top">
                <CheckBox
                    android:id="@+id/cardview_like1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checket_selector"/>
                <TextView
                    android:id="@+id/cardview_like2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fab_margin"
                    android:text="10 Like"
                    android:layout_marginLeft="@dimen/cardview_margin_top"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>