<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/picture_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/picture_height"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/picture_detail_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/primary">

            <ImageView
                android:id="@+id/picture_detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/image"
                android:transitionName="@string/cardview_img_transition"
                app:layout_collapseMode="parallax"/>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>
            
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingTop="@dimen/login_padding_lateral">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/picture_detail_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_text"
                android:text="@string/create_usuario"
                android:paddingRight="@dimen/cardview_margin_top"
                android:paddingLeft="@dimen/cardview_margin_top"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="@dimen/login_padding_lateral"
                android:paddingLeft="@dimen/login_padding_lateral"
                android:paddingBottom="@dimen/login_padding_lateral">
                <TextView
                    android:id="@+id/picture_detail_likenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_text"
                    android:text="10"
                    />
                <TextView
                    android:id="@+id/picture_detail_secondword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_text"
                    android:text="@string/picture_detail_second"
                    android:layout_marginLeft="@dimen/cardview_corner_radius"/>
            </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/picture_detail_divider"
                android:background="@color/primary"
            />
            <TextView
                android:id="@+id/picture_detail_titleImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_text"
                android:text="@string/picture_detail_tituloImg"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/login_text"
                />
            <TextView
                android:id="@+id/picture_detail_contenidoImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/login_text"
                android:text="string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg string/picture_detail_tituloImg"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/login_text"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/heart1"
        app:layout_anchor="@id/picture_detail_appbar"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>